Add function for random computer play choice

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     </head>
 
     <body>
-        
+        <script>
+            function getComputerChoice() {
+                let choice = Math.random() * 100;
+
+                if (choice <= 33) {
+                    return "Rock";
+                } else if (choice > 66) {
+                    return "Paper";
+                } else {
+                    return "Scissors";
+                }
+            }
+
+            console.log(getComputerChoice());
+        </script>
     </body>
 </html>
