Add running a single round of the game

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
                 }
             }
 
-            console.log(getComputerChoice());
+            const playerChoice = "ROCK";
+
+            const computerChoice = getComputerChoice();
+
+            console.log(playRound(playerChoice, computerChoice));
         </script>
     </body>
 </html>
