Add player input to the game

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 }
             }
 
-            const playerChoice = "ROCK";
+            const playerChoice = prompt("Enter your choice: ").toUpperCase();
 
             const computerChoice = getComputerChoice();
 
