--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
             <button id="paper">Paper</button>
             <button id="scissors">Scissors</button>
         </div>
+
+        <ol id="results"></ol>
     </body>
 </html>
