Display player and computer scores in interface

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     </head>
 
     <body>
+        <ul>
+            <li id="player-score">Player Score: 0</li>
+            <li id="computer-score">Computer Score: 0</li>
+        </ul>
+
         <div id="options">
             <button id="rock">Rock</button>
             <button id="paper">Paper</button>
